[package]
name = "gfw_resist_tcp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
pcap = "1"
pnet = { version = "0.35", features = ["std"] }
quinn = "0.11"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
