[package]
name = "gfw_resist_tcp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dashmap = "5"
futures = "0.3"
pnet = "0.34"
quinn = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.25"
